examples/errors/WrongType.bkf
layer foo:
| *_ => []

alias a = {foo} -- chords must only contain chords (or other lower types)
alias b = [foo] -- sequences must only contain sequences (or other lower types)
alias c = {b} -- chords cannot contain sequences

alias d: Layer = [] -- oops, the annotation disagrees!
